--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:theme="@style/Theme.AndroidPhotos59"
         tools:targetApi="31">
         <activity
-            android:name=".Albums"
+            android:name=".AlbumsActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -21,7 +21,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".CreateAlbumActivity" />
+        <activity android:name=".PhotoActivity" />
     </application>
 
 </manifest>
